@@ -28,6 +28,7 @@
 		- Enabled handling of LocalColumns having no values set.
 		- Suppress writing of NULL attribute values.
 		- Added DIAdem DAT to ATFX converter.
+		- Implemented method "ApplElemAccess"->"deleteInstances".
 		- Fixed method "isObligatory" of the interface ApplicationAttribute.
 		- Fixed misspelling of ApplicationAttribute tag from "autogenerated" to "autogenerate".
 
